// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/core class compiles decorator for a class 1`] = `
"class Link extends HTMLAnchorElement {}

customElements.define('x-test', Link);"
`;

exports[`@ast-decorators/core class compiles decorators imported as namespace 1`] = `
"class Link extends HTMLAnchorElement {}

console.log('foo is 1');
console.log('bar is 0');"
`;

exports[`@ast-decorators/core class compiles decorators with params 1`] = `
"class Link extends HTMLAnchorElement {}

console.log([3, 4]);
console.log(2);
console.log(1);
console.log('test');
console.log({
  bar: 'baz'
});"
`;

exports[`@ast-decorators/core class compiles multiple decorators for a class 1`] = `
"class Link extends HTMLAnchorElement {}

console.log('foo is 1');
console.log('bar is 0');"
`;

exports[`@ast-decorators/core class compiles renamed decorators 1`] = `
"class Link extends HTMLAnchorElement {}

console.log('foo is 1');
console.log('bar is 0');"
`;

exports[`@ast-decorators/core class ignores other decorators 1`] = `
"import anotherDecorator from 'other-decorators';

@anotherDecorator
class Link extends HTMLAnchorElement {}

console.log('foo is 1');
console.log('bar is 0');"
`;
